<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_bg"
              android:orientation="vertical">

    <include layout="@layout/title_style_child_right_text"/>

    <EditText
        android:id="@+id/activity_adduser_name"
        style="@style/edittext_style"
        android:layout_marginTop="@dimen/h20"
        android:hint="@string/adduser_name"
        android:paddingLeft="@dimen/w20"/>

    <EditText
        android:id="@+id/activity_adduser_introduce"
        style="@style/edittext_style"
        android:layout_marginTop="@dimen/h20"
        android:hint="@string/adduser_introduce"
        android:paddingLeft="@dimen/w20"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/h20"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/activity_adduser_sex_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:text="@string/adduser_sex_male"/>

        <RadioButton
            android:id="@+id/activity_adduser_sex_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/adduser_sex_female"/>
    </RadioGroup>

    <Button
        android:id="@+id/activity_adduser_save"
        style="@style/button_style"
        android:layout_marginTop="@dimen/h20"
        android:text="@string/adduser_save"/>


</LinearLayout>
