<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:layout_width="@dimen/w480"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h20"
        android:gravity="center"
        android:text="@string/dialog_title"
        android:textColor="@color/main_color"
        android:textSize="@dimen/title_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/h40"
        android:text="@string/dialog_body"
        android:textColor="@color/gray_main"
        android:textSize="@dimen/read_long_size"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/h40"
        android:background="@color/gray_line"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/h80"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_delete_item_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_bt_cancel"
            android:textColor="@color/gray_main"
            android:textSize="@dimen/read_long_size"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray_line"/>

        <TextView
            android:id="@+id/dialog_delete_item_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_bt_ok"
            android:textColor="@color/main_color"
            android:textSize="@dimen/read_long_size"/>
    </LinearLayout>

</LinearLayout>
