<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/tool_bar_height"
              android:layout_gravity="bottom"
              android:background="@color/white"
              android:gravity="center_vertical"
              android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/menu_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu_1_icon"
            android:layout_width="@dimen/tool_bar_image_size"
            android:layout_height="@dimen/tool_bar_image_size"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/menu_1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_bar_menu_1"
            android:textSize="@dimen/introduce_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu_2_icon"
            android:layout_width="@dimen/tool_bar_image_size"
            android:layout_height="@dimen/tool_bar_image_size"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/menu_2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_bar_menu_2"
            android:textSize="@dimen/introduce_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu_3_icon"
            android:layout_width="@dimen/tool_bar_image_size"
            android:layout_height="@dimen/tool_bar_image_size"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/menu_3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_bar_menu_3"
            android:textSize="@dimen/introduce_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/menu_4_icon"
            android:layout_width="@dimen/tool_bar_image_size"
            android:layout_height="@dimen/tool_bar_image_size"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/menu_4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tools_bar_menu_4"
            android:textSize="@dimen/introduce_size"/>
    </LinearLayout>

</LinearLayout>
